--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,24 @@
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Mach deinen eigenen Bundeshaus Triangel</title>
-    <meta name="description" content="Das Giebeldreieck über dem Haupteingang des Bundeshauses soll mit einem zeitgenössischen Kunstwerk verziert werden. Gib dein bestes!.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta
+      name="description"
+      content="Das Giebeldreieck über dem Haupteingang des Bundeshauses soll mit einem zeitgenössischen Kunstwerk verziert werden. Gib dein Bestes!"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="Mach deinen eigenen Bundeshaus Triangel">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content=""> 
-    <meta property="og:image" content="/bundeshaustriangel-seo.jpg"> <!–– seo pfad muss dann absolut sein ––>
+    <meta
+      property="og:title"
+      content="Mach deinen eigenen Bundeshaus Triangel"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="bundeshaustriangel-seo.jpg" />
+    <!–– seo pfad muss dann absolut sein ––>
   </head>
   <body>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 
     <h1>Hallo</h1>
   </body>
