--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,62 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Mach deinen eigenen Bundeshaus Triangel</title>
+    <title>Mach deinen eigenen Bundeshaustriangel</title>
     <meta
       name="description"
-      content="Das Giebeldreieck über dem Haupteingang des Bundeshauses soll mit einem zeitgenössischen Kunstwerk verziert werden. Gib dein Bestes!"
+      content="Das Giebeldreieck über dem Haupteingang des Bundeshauses Bern der Schweiz soll mit einem zeitgenössischen Kunstwerk verziert werden. Gib dein Bestes!"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <meta
       property="og:title"
-      content="Mach deinen eigenen Bundeshaus Triangel"
+      content="Mach deinen eigenen Bundeshaustriangel"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="" />
     <meta property="og:image" content="bundeshaustriangel-seo.jpg" />
     <!–– seo pfad muss dann absolut sein ––>
+    <script src="index.js"></script>
   </head>
   <body>
-    <script src="index.js"></script>
+    <nav class="navbar navbar-light bg-light">
+      <span class="navbar-brand mb-0 h1"
+        >Mach deinen eigenen Bundeshaustriangel</span
+      >
+    </nav>
 
-    <h1>Hallo</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <h2>Schritt 1: Bild raufladen</h2>
+          <form>
+            <div class="form-group">
+              <input
+                type="file"
+                id="upload"
+                class="form-control-file"
+                name="filename"
+              /><br />
+              <button type="submit" id="submit" class="btn btn-primary">
+                Raufladen
+              </button>
+            </div>
+          </form>
+
+          <h2>Schritt 2: Triangel runterladen</h2>
+
+          <button class="btn btn-success">
+            <i class="bi bi-caret-down-fill"></i> Runterladen
+          </button>
+        </div>
+
+        <div class="col-12">
+          <canvas id="canvas" width="300px" height="300px" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
