Canvas: Test works

--- a/src/index.html
+++ b/src/index.html
@@ -34,15 +34,7 @@
           <h2>Schritt 1: Bild raufladen</h2>
           <form>
             <div class="form-group">
-              <input
-                type="file"
-                id="upload"
-                class="form-control-file"
-                name="filename"
-              /><br />
-              <button type="submit" id="submit" class="btn btn-primary">
-                Raufladen
-              </button>
+              <input type="file" id="upload" class="form-control-file" /><br />
             </div>
           </form>
 
@@ -53,8 +45,10 @@
           </button>
         </div>
 
-        <div class="col-12">
-          <canvas id="canvas" width="300px" height="300px" />
+        <div class="col-8">
+          <img src="bundeshaustriangel-seo.jpg" width="100%" />
+
+          <canvas id="canvas" width="500px" height="300px" />
         </div>
       </div>
     </div>
