--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,17 @@
         </div>
       </div>
     </div>
+
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted"
+          >2021, Build with indifference 😑&mdash; Bilder werden nicht auf dem
+          Server gespeichert. Keine Werbung. Kein Tracking. &mdash;
+          <a href="https://github.com/cstuder/bundeshaustriangel">Sourcecode</a>
+          &mdash; <a href="mailto:cstuder@existenz.ch">Kontakt</a> &mdash; Ein
+          Produkt der <a href="https://firma.aare.guru">Aare Guru GmbH</a></span
+        >
+      </div>
+    </footer>
   </body>
 </html>
