--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,19 @@
       >
     </nav>
 
+    <img
+      src="bundeshaustriangel-seo.jpg"
+      class="d-none"
+      alt="Preload initial image"
+      id="initialImage"
+    />
+    <img
+      src="bundeshaustriangel-maske.png"
+      class="d-none"
+      alt="Preload mask image"
+      id="maskImage"
+    />
+
     <div class="container">
       <div class="row">
         <div class="col-4">
@@ -40,15 +53,11 @@
 
           <h2>Schritt 2: Triangel runterladen</h2>
 
-          <button class="btn btn-success">
-            <i class="bi bi-caret-down-fill"></i> Runterladen
-          </button>
+          <button class="btn btn-success">Runterladen</button>
         </div>
 
         <div class="col-8">
-          <img src="bundeshaustriangel-seo.jpg" width="100%" />
-
-          <canvas id="canvas" width="500px" height="300px" />
+          <canvas id="canvas" width="730px" height="383px" />
         </div>
       </div>
     </div>
