--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 
           <h2>Schritt 2: Triangel runterladen</h2>
 
-          <a target="_blank" href="" id="download" class="btn btn-success">Runterladen</button>
+          <a target="_blank" id="download" class="btn btn-success">Runterladen</button>
         </div>
 
         <div class="col-8">
