HTML: Fixes link

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
         <span class="text-muted"
           >2021, Build with indifference 😑&mdash; Bilder werden nicht auf dem
           Server gespeichert. Keine Werbung. Kein Tracking. &mdash;
-          <a href="https://github.com/cstuder/bundeshaustriangel">Sourcecode</a>
+          <a href="https://github.com/cstuder/bundestriangel">Quellcode</a>
           &mdash; <a href="mailto:cstuder@existenz.ch">Kontakt</a> &mdash; Ein
           Produkt der <a href="https://firma.aare.guru">Aare Guru GmbH</a></span
         >
