Download: Fixes double downloads

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,8 @@
 
           <h2>Schritt 2: Triangel runterladen</h2>
 
-          <a target="_blank" id="download" class="btn btn-success">Runterladen</button>
+          <button id="download" class="btn btn-success">Runterladen</button>
+          <a id="downloadLink"></a>
         </div>
 
         <div class="col-8">
