--- a/src/index.html
+++ b/src/index.html
@@ -39,13 +39,13 @@
     <div class="container">
       <div class="row headRow">
         <div class="col">
-          <img src="/triangel-head.png" alt="" />
+          <img src="/triangel-head.png" alt="Bundeshaustriangel Header" />
           <h1>
             Mach dein eigenes
             <a
               href="https://www.parlament.ch/press-releases/Pages/mm-info-2021-02-03.aspx"
               target="_blank"
-              >Bundehaus Triangel</a
+              >Bundeshaus Triangel</a
             >
           </h1>
         </div>
