JS: Alles noch chlii schöner

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,9 @@
         <p class="impressum">
           2021, Built during Homeoffice Zoom Calls 😑 &mdash; Bilder werden
           nicht auf dem Server gespeichert. Keine Werbung. Kein Tracking. Bisch
-          aständig gäu! <br />
+          aständig gäu!
+        </p>
+        <p class="impressum">
           Hintergrundbild:
           <a
             href="https://de.wikivoyage.org/wiki/Datei:Bundeshaus_Bern_2009,_Flooffy.jpg"
@@ -104,7 +106,9 @@
           unter Creative-Commons-Lizenz
           <a href="https://creativecommons.org/licenses/by/2.0/deed.de"
             >Namensnennung 2.0 generisch</a
-          ><br />
+          >
+        </p>
+        <p class="impressum">
           <a href="https://github.com/cstuder/bundestriangel">Quellcode</a>
           &mdash; <a href="mailto:cstuder@existenz.ch">Kontakt</a> &mdash; Ein
           Gehirnfurz der <a href="https://firma.aare.guru">Aare Guru GmbH</a>
