--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
       property="og:title"
       content="Mach deinen eigenen Bundeshaustriangel"
     />
+    <meta
+      name="og:description"
+      content="Das Giebeldreieck über dem Haupteingang des Bundeshauses Bern der Schweiz soll mit einem zeitgenössischen Kunstwerk verziert werden. Gib dein Bestes!"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://bundeshaustriangel.aare.guru" />
     <meta
