--- a/src/index.html
+++ b/src/index.html
@@ -21,15 +21,21 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://bundeshaustriangel.aare.guru" />
-    <meta
-      property="og:image"
-      content="https://bundeshaustriangel.aare.guru/bundeshaustriangel-seo.jpg"
-    />
+    <meta property="og:image" content="bundeshaustriangel-seo.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="https://bundeshaustriangel.aare.guru" />
-    <meta name="twitter:title" content="Mach deinen eigenen Bundeshaustriangel" />
-    <meta name="twitter:description" content="Das Giebeldreieck über dem Haupteingang des Bundeshauses Bern der Schweiz soll mit einem zeitgenössischen Kunstwerk verziert werden. Gib dein Bestes!" />
-    <meta name="twitter:image" content="https://bundeshaustriangel.aare.guru/bundeshaustriangel-seo.jpg" />
+    <meta
+      name="twitter:title"
+      content="Mach deinen eigenen Bundeshaustriangel"
+    />
+    <meta
+      name="twitter:description"
+      content="Das Giebeldreieck über dem Haupteingang des Bundeshauses Bern der Schweiz soll mit einem zeitgenössischen Kunstwerk verziert werden. Gib dein Bestes!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://bundeshaustriangel.aare.guru/bundeshaustriangel-seo.jpg"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Pacifico&family=Staatliches&display=swap"
